media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: plex
          image: linuxserver/plex:1.32.2
          ports:
            - name: http
              containerPort: 32400
            - name: dlna1
              containerPort: 1900
              protocol: UDP
            - name: bonjour
              containerPort: 5353
              protocol: UDP
            - name: companion
              containerPort: 8324
            - name: gdm1
              containerPort: 32410
              protocol: UDP
            - name: gdm2
              containerPort: 32412
              protocol: UDP
            - name: gdm3
              containerPort: 32413
              protocol: UDP
            - name: gdm4
              containerPort: 32414
              protocol: UDP
            - name: dlna2
              containerPort: 32469
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
