media/plex/service.lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - name: http
      port: 32400
      targetPort: 32400
    - name: dlna1
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: bonjour
      port: 5353
      targetPort: 5353
      protocol: UDP
    - name: companion
      port: 8324
      targetPort: 8324
    - name: gdm1
      port: 32410
      targetPort: 32410
      protocol: UDP
    - name: gdm2
      port: 32412
      targetPort: 32412
      protocol: UDP
    - name: gdm3
      port: 32413
      targetPort: 32413
      protocol: UDP
    - name: gcm4
      port: 32414
      targetPort: 32414
      protocol: UDP
    - name: dlna2
      port: 32469
      targetPort: 32469
