media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
