media/plex/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - plex.lan
      secretName: plex-tls
  rules:
    - host: plex.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  name: http
